--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --max-warnings=0"
+    "lint": "next lint --max-warnings=0",
+    "prepare": "husky install"
   },
-  "lint-staged":{
+  "lint-staged": {
     "src/**/*": [
       "yarn lint --fix"
     ]
@@ -28,7 +29,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1"
   }
