--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "webpack": "4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.19.3",
+    "@babel/plugin-transform-typescript": "7.19.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
@@ -45,6 +48,7 @@
     "husky": "^8.0.0",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
+    "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1"
   }
